# homology-engine

./: AGENT.md  Cargo.toml  README.md
src/: barcode.rs  betti.rs  boundary.rs  diagram.rs  filtration.rs  lib.rs  reduction.rs
